Made minor change to the string that gets displayed on the zoomed-in circles

--- a/neighbors.html
+++ b/neighbors.html
@@ -55,7 +55,7 @@
 			
 			//return text to display on circle when clicked
 			function teamText(d) {
-				return d.name + " " + d.year + "\nSeries wins: " + d.wins
+				return d.name + " " + d.year + "\n: "+ d.wins + " series won"
 			}
 			
 			//zoom or un-zoom informational circle
