Added dictionary for team photo names

--- a/neighbors.html
+++ b/neighbors.html
@@ -16,6 +16,7 @@
     </head>
     <body>
         <script type="text/javascript">
+			var teamPhotos= {"ATL":"ATL.jpg", "BOS":"BOS.jpg", "BKN":"BKN.jpg", "CHA":"CHA.jpg", "CHI":"CHI.jpg", "CLE":"CLE.jpg", "DAL":"DAL.jpg", "DEN":"DEN.jpg", "DET":"DET.jpg", "GSW":"GSW.jpg", "HOU":"HOU.jpg", "IND":"IND.jpg", "LAC":"LAC.jpg", "LAL":"LAL.jpg", "MEM":"MEM.jpg", "MIA":"MIA.jpg", "MIL":"MIL.jpg", "MIN":"MIN.jpg", "NOH":"NOH.jpg", "NYK":"NYK.jpg", "OKC":"OKC.jpg", "ORL":"ORL.jpg", "PHI":"PHI.jpg", "PHO":"PHO.jpg", "POR":"POR.jpg", "SAS":"SAS.jpg", "SAC":"SAC.jpg", "TOR":"TOR.jpg", "UTA":"UTA.jpg", "WAS":"WAS.jpg"}
 			var colors= {"ATL":"#D21033", "BOS":"#05854C", "BKN":"#000000", "CHA":"#F26532", "CHH":"#25799A", "CHI":"#D4001F", "CLE":"#9F1425", "DAL":"#006AB5", "DEN":"#4393D1", "DET":"#006BB6", "GSW":"#FFC33C", "HOU":"#CC0000", "IND":"#FFC225", "LAC":"#EE2944", "LAL":"#4A2583", "MEM":"#85A2C6", "MIA":"#B62630", "MIL":"#00330A", "MIN":"#EFEFEF", "NJN":"#002258", "NOH":"#0095CA", "NYK":"#2E66B2", "OKC":"#0075C1", "ORL":"#077ABD", "PHI":"#C7974D", "PHO":"#FF7A31", "POR":"#E1393E", "SAS":"#BEC8C9", "SAC":"#743389", "SEA":"#19542D", "TOR":"#CD1041", "UTA":"#448CCE", "WAS":"#004874"}
             //Width and height
             var w= 1000;
