--- a/neighbors.html
+++ b/neighbors.html
@@ -96,14 +96,12 @@
 									});
 												
 				//create groups for neighbor circles (planets)
-				/*for (i = 0; i < 16; i++) {
+				for (i = 0; i < 16; i++) {
 					var orbit= svg.append("g")
 						.attr("class","orbit");
-					orbit.append("circle")
-						.attr("class","orbit");
-					orbit.append("svg")
-						.attr("class","text");
-				}*/
+					orbit.append("circle");
+					orbit.append("svg");
+				}
 			});
         </script>
     </body>
