Minor change: central image clipping code made slightly more clean

--- a/neighbors.html
+++ b/neighbors.html
@@ -59,6 +59,7 @@
 						.attr("ry",mainR);
 				sun.append("image")
 						.attr("class","sun")
+						.attr("clip-path","url(#sun)");
 						.attr("x",w/2-100)
 						.attr("y",h/2-100)
 						.attr("width",200)
