--- a/neighbors.html
+++ b/neighbors.html
@@ -25,7 +25,8 @@
             var mainR= w/12; //radius of main circle
             var distScale= 200
 			var zoomRad= w/8;
-			var offset= 15; 
+			var offset= 15;
+			var toggleClicked= [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0];
 			
 			//Create SVG element
 			var svg= d3.select("body")
@@ -59,7 +60,7 @@
 						.attr("ry",mainR);
 				sun.append("image")
 						.attr("class","sun")
-						.attr("clip-path","url(#sun)");
+						.attr("clip-path","url(#sun)")
 						.attr("x",w/2-100)
 						.attr("y",h/2-100)
 						.attr("width",200)
@@ -97,11 +98,14 @@
 									d3.select(this).select("circle").attr("stroke",d3.rgb(color).darker(1));
 									d3.select(this).select("circle").attr("stroke-width","5");
 								})
-						.on("mouseout",function() {
-										d3.select(this).select("circle").attr("stroke-width","0");
+						.on("mouseout",function(d,i) {
+										if(toggleClicked[i]==0) {
+											d3.select(this).select("circle").attr("stroke-width","0");
+										}
 									})
-						.on("click", function(d) {
+						.on("click", function(d,i) {
 										toggleOrbit(d);
+										toggleClicked[i]= 1;
 									});
 												
 				//create groups for neighbor circles (planets)
