Toggle buttons split into east and west on sides of page, and began writing code for help guide

--- a/neighbors.html
+++ b/neighbors.html
@@ -18,15 +18,15 @@
     <body>
         <script type="text/javascript">
 			var teamNames= ["ATL", "BRK", "CHA", "CHI", "DAL", "GSW", "HOU", "IND", "LAC", "MEM", "MIA", "OKC", "POR", "SAS", "TOR", "WAS"]
-			var colors= {"ATL":"#D21033", "BOS":"#05854C", "BRK":"#000000", "CHA":"#F26532", "CHH":"#25799A", "CHI":"#D4001F", "CLE":"#9F1425", "DAL":"#006AB5", "DEN":"#4393D1", "DET":"#006BB6", "GSW":"#FFC33C", "HOU":"#CC0000", "IND":"#FFC225", "LAC":"#EE2944", "LAL":"#4A2583", "MEM":"#85A2C6", "MIA":"#B62630", "MIL":"#00330A", "MIN":"#EFEFEF", "NJN":"#002258", "NOH":"#0095CA", "NYK":"#2E66B2", "OKC":"#0075C1", "ORL":"#077ABD", "PHI":"#C7974D", "PHO":"#FF7A31", "POR":"#E1393E", "SAS":"#BEC8C9", "SAC":"#743389", "SEA":"#19542D", "TOR":"#CD1041", "UTA":"#448CCE", "WAS":"#004874"}
+			var colors= {"ATL":"#D21033", "BOS":"#05854C", "BRK":"#000000", "CHA":"#F26532", "CHH":"#25799A", "CHI":"#D4001F", "CLE":"#9F1425", "DAL":"#006AB5", "DEN":"#4393D1", "DET":"#006BB6", "GSW":"#FFC33C", "HOU":"#CC0000", "IND":"#FFC225", "LAC":"#EE2944", "LAL":"#4A2583", "MEM":"#85A2C6", "MIA":"#B62630", "MIL":"#00330A", "MIN":"#EFEFEF", "NJN":"#002258", "NOH":"#0095CA", "NYK":"#2E66B2", "OKC":"#0075C1", "ORL":"#077ABD", "PHI":"#C7974D", "PHO":"#FF7A31", "POR":"#E1393E", "SAS":"#BEC8C9", "SAC":"#743389", "SEA":"#19542D", "TOR":"#CD1041", "UTA":"#448CCE", "WAS":"#004874","HELP":"#ff1493"}
             //Width and height
-            var w= 70*16+10;
-            var h= 900;
+            var w= 70*17+10;
+            var h= 950;
             var mainR= w/12; //radius of main circle
             var distScale= 200
 			var zoomRad= w/8;
 			var offset= 15;
-			var toggleClicked= [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0];
+			var toggleClicked= [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0]; //used in keeping toggle circles highlighted
 			
 			//Create SVG element
 			var svg= d3.select("body")
@@ -76,9 +76,11 @@
 				toggle.append("circle") //Add circle to each group
 					.attr("class","toggle")
 					.attr("cx", function(d,i) {
-								return 40 + 70*i;
+								return i<8 ? w-80 : 80;
 							})
-					.attr("cy", 80)
+					.attr("cy", function(d,i) {
+							return 200+70*(i%8);
+						})
 					.attr("r", 30)
 					.attr("fill", function(d) {
 								return (d.team in colors) ? colors[d.team] : "#000000";
@@ -86,9 +88,11 @@
 				toggle.append("text") //Add text to each group
 					.attr("class","toggle")
 					.attr("x", function(d,i) {
-								return 40 + 70*i;
+								return i<8 ? w-80 : 80;
 							})
-					.attr("y", 80)
+					.attr("y", function(d,i) {
+							return 200+70*(i%8);
+						})
 					.attr("text-anchor", "middle")
 					.attr("dominant-baseline","central")
 					.attr("fill", "white")
