Fixed susun coordinates so that image is centered within the orbit

--- a/neighbors.html
+++ b/neighbors.html
@@ -70,8 +70,8 @@
 				sun.append("image")
 						.attr("class","sun")
 						.attr("clip-path","url(#sun)")
-						.attr("x",orbitCenterX)
-						.attr("y",h/2)
+						.attr("x",orbitCenterX-mainR)
+						.attr("y",h/2-mainR)
 						.attr("width",imageSidelen)
 						.attr("height",imageSidelen);
 				
