Made it so that zoom text appears again

--- a/neighbors.html
+++ b/neighbors.html
@@ -179,6 +179,7 @@
 										unSelectToggles(i);
 										toggleClicked[i]= 1;
 										setOrbit(d);
+										setZoomText(d);
 									});
 												
 				//create groups for neighbor circles (planets)
