--- a/clip.html
+++ b/clip.html
@@ -19,6 +19,19 @@
 		</style>
     </head>
     <body>
+		<svg viewBox = "0 0 1100 400" version = "1.1">
+    <g stroke = "none" fill = "none">
+        <path d = "M 50 200 A 100 100 0 1 1 250 200" id="pp"/>
+        <path d = "M 400 100 a 100 50 30 1 1 250 50"/>
+        <path d = "M 400 300 a 100 50 45 1 1 250 50"/>
+        <path d = "M 750 200 a 100 50 135 1 1 250 50"/>
+    </g>
+	<text text-anchor="middle">
+		<textPath  xlink:href="#pp" spacing="auto" startOffset="50%" method="align">
+			 nikhil nathwani
+		</textPath>
+	</text>
+</svg>
         <script type="text/javascript">
 			
 			var w= 500;
@@ -28,6 +41,8 @@
 			var start= 9*h/24;
 			
 			var color= "blue";
+			
+			
 			
 			//move selected object to front of parent's layout
 			d3.selection.prototype.moveToFront = function() {
