--- a/neighbors.html
+++ b/neighbors.html
@@ -19,7 +19,7 @@
 			var colors= {"ATL":"#D21033", "BOS":"#05854C", "BRK":"#000000", "CHA":"#F26532", "CHH":"#25799A", "CHI":"#D4001F", "CLE":"#9F1425", "DAL":"#006AB5", "DEN":"#4393D1", "DET":"#006BB6", "GSW":"#FFC33C", "HOU":"#CC0000", "IND":"#FFC225", "LAC":"#EE2944", "LAL":"#4A2583", "MEM":"#85A2C6", "MIA":"#B62630", "MIL":"#00330A", "MIN":"#EFEFEF", "NJN":"#002258", "NOH":"#0095CA", "NYK":"#2E66B2", "OKC":"#0075C1", "ORL":"#077ABD", "PHI":"#C7974D", "PHO":"#FF7A31", "POR":"#E1393E", "SAS":"#BEC8C9", "SAC":"#743389", "SEA":"#19542D", "TOR":"#CD1041", "UTA":"#448CCE", "WAS":"#004874","HELP":"#d8d8f0"}
             //Width and height
             var w= 1200;
-            var h= 900;
+            var h= 590;
             var mainR= w/12; //radius of main circle
             var distScale= 150
 			var zoomRad= w/8;
@@ -31,7 +31,7 @@
 			var toggleGroupWidth= 2.5*toggleButtonDiam + 2*leftPad;
 			var imageSidelen= 200;
 			var orbitCenterX= toggleGroupWidth+zoomRad+distScale+offset+mainR;
-			var orbitCenterY= 5*h/12;
+			var orbitCenterY= h/2;
 			var minNeighRad= w/120;
 			var winRadScale= w/120;
 			var onHelp= true;
@@ -182,15 +182,23 @@
 				/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~TOGGLE~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 				
 				//create left bar of 2014 playoff teams
-				toggle= svg.append("svg")
+				toggle= d3.select("body")
+							.append("div")
+							.style("top",5+"px")
+							.style("left",0+"px")
+							.style("height","100%")
+							.style("width","20%")
+							.style("position","fixed")
+							.style("overflow","scroll")
+							.append("svg")
 							.attr("class","toggle")
 							.attr("x",0)
 							.attr("y",5)
 							.attr("width", toggleGroupWidth)
 							.attr("height", h);
 				
-				togTitleFontSize= h/40;
-				togConfFontSize= h/55;
+				togTitleFontSize= 22;
+				togConfFontSize= 18;
 				confs= ["WEST","EAST"];
 				toggle.append("text")
 						.attr("fill","#999999")
