--- a/quick/eras.html
+++ b/quick/eras.html
@@ -96,7 +96,7 @@
 								svg.selectAll("circle.year")
 									.transition().delay(0).duration(500).attr("r", rad)
 																		.attr("stroke", "none");;
-								svg.selectAll("text.data").attr("visibility","hidden")
+								svg.selectAll("svg.text").attr("visibility","hidden")
 							})
 					
 					//Hover functionality	
@@ -203,6 +203,7 @@
 						//Add text
 						playerData= dots.append("svg")
 										.attr("svg","text")
+										.attr("visibility","hidden")
 						for(i=0;i<6;i++){
 							playerData.append("text")
 						}
@@ -220,8 +221,8 @@
 								})
 							.on("click",function(d) {
 									d3.select(this).select("circle").attr("fill", setDotColor(confFinals,finalsLoss,champion,d.year));
-									zoomDot(d3.select(this));
 									setZoomText(d3.select(this),d);
+									zoomDot(d3.select(this));
 								});
 					})
 				}
